# proyecto_mml_2023

./: README.md  environment.yml  production_forecasting.ipynb  pyproject.toml
data/: WL01.csv  WL02.csv  WL03.csv
