[tool.poetry]
name = "proyecto-mml-2023"
version = "0.1.0"
description = "Proyecto MML 2023 Modelos Generativos para Series de Tiempo en O&G"
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "proyecto_mml_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
hyperopt-prophet = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
